fix: Fix theme mode button and remove work logos on dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,5 +13,5 @@ body {
 }
 
 body [data-theme="dark"] {
-  background-color: #202024;
+  background-color: #2C3333;
 }
